added a new login

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script src="common.js"></script>
 	<script>
 		var currentUser = null; // This will contain the logged in user
-
+		debugger
 		// Check if there is a session cookie
 		var token = Cookies.get("ua_session_token");
 		if (token) {
