--- a/login.html
+++ b/login.html
@@ -11,9 +11,12 @@
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap-theme.min.css">
 
+<!-- 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
+
+
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="https://app.userapp.io/css/demo/tutorial.css">
-
+	<link rel="stylesheet" href="stylesheets/login.css">
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="https://app.userapp.io/js/userapp.client.js"></script>
 	<script src="libs/cookies.min.js"></script>
@@ -35,6 +38,7 @@
 				password: document.getElementById("password").value
 			}, function(error, result) {
 				if (error) {
+					debugger
 					// Wrong password maybe?
 					alert("Error: " + error.message);
 					showLoader(false);
@@ -50,7 +54,8 @@
 		function onLoginSuccessful() {
 			// Now, save the token in a cookie
 			Cookies.set("ua_session_token", UserApp.global.token);
-			
+			debugger
+			var token = Cookies.get("ua_session_token");
 			// Redirect the user to the index page
 			window.location.href = "index.html";
 			showLoader(false);
@@ -58,18 +63,70 @@
 	</script>
 </head>
 <body>
-	<div class="container" style="text-align: center;">
-		<form class="form" onsubmit="return login()">
-			<h2 class="form-heading">Log in to MyApp</h2>
-			<div class="form-fields">
-				<input id="username" type="text" class="form-control" placeholder="Username" required autofocus>
-				<input id="password" type="password" class="form-control" placeholder="Password" required>
+	<div class="container">
+		<form onsubmit="return login()">
+		<div class="omb_login">
+			<h3 class="omb_authTitle">Login or <a href="signup.html">Sign up</a></h3>
+			<div class="row omb_row-sm-offset-3 omb_socialButtons">
+				<div class="col-xs-4 col-sm-2">
+					<a href="#" class="btn btn-lg btn-block omb_btn-facebook">
+						<i class="fa fa-facebook visible-xs"></i>
+						<span class="hidden-xs">Facebook</span>
+					</a>
+				</div>
+				<div class="col-xs-4 col-sm-2">
+					<a href="#" class="btn btn-lg btn-block omb_btn-twitter">
+						<i class="fa fa-twitter visible-xs"></i>
+						<span class="hidden-xs">Twitter</span>
+					</a>
+				</div>	
+				<div class="col-xs-4 col-sm-2">
+					<a href="#" class="btn btn-lg btn-block omb_btn-google">
+						<i class="fa fa-google-plus visible-xs"></i>
+						<span class="hidden-xs">Google+</span>
+					</a>
+				</div>	
 			</div>
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+
+			<div class="row omb_row-sm-offset-3 omb_loginOr">
+				<div class="col-xs-12 col-sm-6">
+					<hr class="omb_hrOr">
+					<span class="omb_spanOr">or</span>
+				</div>
+			</div>
 			<img id="loader" src="img/ajax-loader.gif" style="display: none; margin: 30px auto;">
+			<div class="row omb_row-sm-offset-3">
+				<div class="col-xs-12 col-sm-6">	
+					<form class="omb_loginForm" action="" autocomplete="off" method="POST">
+						<div class="input-group">
+							<span class="input-group-addon"><i class="fa fa-user"></i></span>
+							<input type="text" class="form-control" name="username" id="username" placeholder="email address">
+						</div>
+						<span class="help-block"></span>
+											
+						<div class="input-group">
+							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+							<input  type="password" class="form-control" name="password" id="password" placeholder="Password">
+						</div>
+
+						<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+					</form>
+				</div>
+			</div>
+			<div class="row omb_row-sm-offset-3">
+				<div class="col-xs-12 col-sm-3">
+					<label class="checkbox">
+						<input type="checkbox" value="remember-me">Remember Me
+					</label>
+				</div>
+				<div class="col-xs-12 col-sm-3">
+					<p class="omb_forgotPwd">
+						<a href="#">Forgot password?</a>
+					</p>
+				</div>
+			</div>	    	
+		</div>
 		</form>
-		
-		<a href="signup.html">Sign up</a>
-	</div> 
+	</div>
 </body>
 </html>
