--- a/login.html
+++ b/login.html
@@ -60,6 +60,17 @@
 			window.location.href = "index.html";
 			showLoader(false);
 		}
+		
+		function facebookLogin()
+		{
+			UserApp.OAuth.getAuthorizationUrl({ provider_id: 'facebook', redirect_uri: 'http://tursib.github.io/' }, 
+				function(error, result) {
+					if (!error) {
+						window.location.href = result.authorization_url;
+					}
+				}
+			);
+		}
 	</script>
 </head>
 <body>
@@ -69,7 +80,7 @@
 			<h3 class="omb_authTitle">Login or <a href="signup.html">Sign up</a></h3>
 			<div class="row omb_row-sm-offset-3 omb_socialButtons">
 				<div class="col-xs-4 col-sm-2">
-					<a href="#" class="btn btn-lg btn-block omb_btn-facebook">
+					<a href="#" class="btn btn-lg btn-block omb_btn-facebook" onclick="return facebookLogin()">
 						<i class="fa fa-facebook visible-xs"></i>
 						<span class="hidden-xs">Facebook</span>
 					</a>
