--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
 		var currentUser = null; // This will contain the logged in user
 		debugger
 		// Check if there is a session cookie
-		var queryString = getUrlVars();
-		if (queryString.ua_token)
-		{
-			Cookies.set("ua_session_token", queryString.ua_token);
-		}
+		var queryToken = getQueryVariable("ua_token");	
+		Cookies.set("ua_session_token", queryToken);
+		
 		var token = Cookies.get("ua_session_token");
 		if (token) {
 			// Yes, there is
@@ -85,6 +83,17 @@
 			UserApp.User.logout(function() {
 				window.location.href = "login.html";
 			});
+		}
+		
+		function getQueryVariable(variable)
+		{
+			   var query = window.location.search.substring(1);
+			   var vars = query.split("&");
+			   for (var i=0;i<vars.length;i++) {
+					   var pair = vars[i].split("=");
+					   if(pair[0] == variable){return pair[1];}
+			   }
+			   return(false);
 		}
 	</script>
 </head>
