--- a/index.html
+++ b/index.html
@@ -1,111 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+---
+layout: page
+---
 
-	<title>Welcome to MyApp</title>
-
-	<!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap-theme.min.css">
-
-	<!-- Custom styles -->
-	<link rel="stylesheet" href="https://app.userapp.io/css/demo/tutorial.css">
-
-	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-	<script src="https://app.userapp.io/js/userapp.client.js"></script>
-	<script src="libs/cookies.min.js"></script>
-	<script src="common.js"></script>
-	<script>
-		var currentUser = null; // This will contain the logged in user
-		debugger
-		// Check if there is a session cookie
-		var queryToken = getQueryVariable("ua_token");	
-		Cookies.set("ua_session_token", queryToken);
-		
-		var token = Cookies.get("ua_session_token");
-		if (token) {
-			// Yes, there is
-			UserApp.setToken(token);
-
-			// Get the logged in user
-			getCurrentUser(function(user) {
-				if (user) {
-					currentUser = user;
-					onUserLoaded();
-				} else {
-					window.location.href = "login.html";
-				}
-			});
-		} else {
-			// No, redirect the user to the login.html page
-			window.location.href = "login.html";
-		}
-
-		// When the user has loaded
-		function onUserLoaded() {
-			// Print the name
-			document.getElementById("name").innerHTML = currentUser.first_name;
-
-      		// Load articles from back-end
-      		getArticles();
-		}
-
-		// Get the logged in user
-		function getCurrentUser(callback) {
-			UserApp.User.get({ user_id: "self" }, function(error, user) {
-				if (error) {
-					callback && callback(null);
-				} else {
-					callback && callback(user[0]);
-				}
-			});
-		}
-
-	    // Get this user's articles from the back-end
-	    function getArticles() {
-			$.get("articles", function(data) {
-				if (data) {
-					$("#articles").html("");
-
-					for (var i = 0; i < data.length; ++i) {
-						$("#articles").append($("<li></li>").text(data[i].title));
-					}
-				}
-			}, "json");
-	    }
-
-		// Logout function
-		function logout() {
-			Cookies.expire("ua_session_token");
-			UserApp.User.logout(function() {
-				window.location.href = "login.html";
-			});
-		}
-		
-		function getQueryVariable(variable)
-		{
-			   var query = window.location.search.substring(1);
-			   var vars = query.split("&");
-			   for (var i=0;i<vars.length;i++) {
-					   var pair = vars[i].split("=");
-					   if(pair[0] == variable){return pair[1];}
-			   }
-			   return(false);
-		}
-	</script>
-</head>
-<body>
-	<div class="container">
-		<h1 class="form-heading">Welcome to MyApp, <span id="name"></span>!</h1>
-		<a href="javascript:logout()">Log out</a>
-	</div> 
-	<div class="container" style="margin-top: 50px;">
-		<ul id="articles">
-	      Loading articles...  
-	    </ul>
-	</div>
-</body>
-</html>
+  <div class="page-header" id="banner">
+    <div class="row">
+      <div class="col-lg-8 col-md-7 col-sm-6">
+        <h1>Vidpub</h1>
+        <p class="lead">We are video, and so can you</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 col-md-3 col-sm-4">
+        <div class="list-group table-of-contents">
+          {% for post in site.posts %}
+          <a class="list-group-item" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
