--- a/old/login.html
+++ b/old/login.html
@@ -21,7 +21,15 @@
 	<script src="https://app.userapp.io/js/userapp.client.js"></script>
 	<script src="libs/cookies.min.js"></script>
 	<script src="common.js"></script>
+	<script src="knockout-3.3.0.js"></script>
+	<script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
+	<script src="app.js"></script>
+
 	<script>
+		$(function(){
+			Vidpub.start();
+		});
+		
 		// Function to show and hide the loader anim
 		function showLoader(show) {
 			document.getElementById("loader").style.display = (show ? "block" : "none");
@@ -31,49 +39,46 @@
 		function login() {
 			// Show the loader
 			showLoader(true);
-
-			// This will authenticate the user
-			UserApp.User.login({
-				login: document.getElementById("username").value,
-				password: document.getElementById("password").value
-			}, function(error, result) {
-				if (error) {
-					debugger
-					// Wrong password maybe?
-					alert("Error: " + error.message);
-					showLoader(false);
-				} else {
-					onLoginSuccessful();
+			Vidpub.loginWithEmailPassword({
+				email    : $("#username").val(),
+				password : $("#password").val(),
+				remember : $("#remember").prop("checked")
+			  }, function(err,res){
+				if(err){
+				  $("#error").text(err);
+				  showLoader(false);
+				}else{
+				   onLoginSuccessful();
 				}
 			});
-
 			return false;
 		}
 
 		// When the user has been logged in successfully
 		function onLoginSuccessful() {
-			// Now, save the token in a cookie
-			Cookies.set("ua_session_token", UserApp.global.token);
-			debugger
-			var token = Cookies.get("ua_session_token");
-			// Redirect the user to the index page
 			window.location.href = "index.html";
 			showLoader(false);
 		}
 		
 		function facebookLogin()
-		{
-			UserApp.OAuth.getAuthorizationUrl({ provider_id: 'facebook', redirect_uri: 'http://tursib.github.io/' }, 
-				function(error, result) {
-					if (!error) {
-						window.location.href = result.authorization_url;
-					}
+		{debugger
+			 Vidpub.loginGithub(function(err,res){
+				if(err){
+				  $("#error").text(err);
+				  showLoader(false);
+				}else{
+				debugger
+				 onLoginSuccessful();
 				}
-			);
+			  });
+			return false;
 		}
 	</script>
 </head>
 <body>
+<a href="/account/profile"><span data-bind="text: name"></span></a>
+        <a href="#" data-bind="click: login_or_out"><span data-bind="text: login_or_out_button"></span></a>
+		
 	<div class="container">
 		<form onsubmit="return login()">
 		<div class="omb_login">
