--- a/account/login.html
+++ b/account/login.html
@@ -2,6 +2,24 @@
 title: "Login or Signup"
 layout: page
 ---
+
+<link rel="stylesheet" href="/css/momentum.css">
+<link rel="stylesheet" href="/css/momentum2.css">
+<style type="text/css">.widget-pop{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif}</style>
+<div class="loading-container">
+	<img src="../../img/logo-grey.png" class="loading-logo">
+</div>
+<div class="background-overlay fadein"></div>
+<ul id="background"><li class="fadein image"></li></ul>
+<div id="settings-container"></div>
+<div class="widgets fadein">
+<div id="full"><div id="introduction" class="light" style="opacity: 1;"><p class="logo"><img src="../../img/logo-white.png"></p>
+<p class="content"><span style="opacity: 1; display: inline;"><div class="prompt">
+    Hello, what's your bus to work?
+    <input id="introduction-input" type="text">
+    <div class="tip"></div>
+</div>
+<!-- 
   <link rel="stylesheet" href="/css/login.css">
   <div class="omb_login">
     <h3 class="omb_authTitle">Login or <a href="/account/signup">Sign up</a></h3>
@@ -69,7 +87,7 @@ layout: page
 				</p>
 			</div>
 		</div>
-	</div>
+	</div> -->
 <script>
   $(function(){
     $("#github").on("click", function(ev){
