--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@ layout: page
                 $.getJSON('http://publictransportationapi.azurewebsites.net/api/Next', workData)
                     .done(function (time) {
                         $('#time').empty();
-
+						$('#time').hide();
                         var isWeekend = (today.getDay() == 6) || (today.getDay() == 0);
                         var whereToGo = "Go to work at: ";
                         if (isWeekend) {
                             whereToGo = "Go to town center at: ";
                         }
                         $('#time').append(whereToGo + time);
+						$('#time').fadeIn();
                     });
             } else {
                 var homeData = {
@@ -94,7 +95,9 @@ layout: page
                 $.getJSON('http://publictransportationapi.azurewebsites.net/api/Next', homeData)
                .done(function (time) {
                    $('#time').empty();
+				   $('#time').hide();
                    $('#time').append("Go Home " + time);
+				   $('#time').fadeIn();
                });
             }
         }
