--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: page
                     .done(function (time) {
                         $('#time').empty();
 			$('#time').hide();
-                        whereToGo = "Go to home at: ";
+                        whereToGo = "Go home at: ";
                         $('#time').append(whereToGo + time);
 			$('#time').fadeIn();
                     });
